Sun Jun 24 13:45:59 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.[ch], daemon/slave.c,
	  gui/gdmconfig.(c|glade), gui/gdmlogin.c:  Add suspend command
	  support although it is off by default (empty command)  Also do
	  checks for commands and don't show their respective menu items
	  if the commands are not present or empty

	* config/gdm.conf.in, daemon/gdm.[ch], daemon/slave.c,
	  daemon/verify-pam.c, daemon/xdmcp.c, gui/gdmconfig.(c|glade),
	  gui/gdmlogin.c:  Apply and massage a patch from Michel Dagenais
	  <michel.dagenais@polymtl.ca> to add optional support
	  for remote auto (timed) login, and also to use enriched strings
	  for the timed and automatic login names.  This is to make the
	  life of sysadmins easier if they're managing a large set of
	  x terminals.

Sat Jun 23 03:17:03 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in, Makefile.am: some pam related fixage

Fri Jun 22 21:02:21 2001  George Lebl <jirka@5z.com>

	* gui/gdmchooser.c: actually implement ScanTime

Fri Jun 22 19:13:05 2001  George Lebl <jirka@5z.com>

	* docs/C/gdm.sgml: fix indirect wait entry, add entries for the
	  showing of different built in sessions (failsafes, chooser)

	* gui/gdmconfig.(c|glade): add toggeling of builtin sessions
	  (failsafes, chooser)

Fri Jun 22 18:53:14 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c: fix up the forward query sending/handeling, fix
	  some wrong freeing too, and fix the hosts_ctl warning by including
	  a prototype.  We finally have chooser stuff all working! Yay!

	* daemon/xdmcp.c, gui/gdmchooser.c: we want to be very careful in
	  what types we pass xdmcp functions, the header does not include
	  areguments in the prototypes, so usage is snarfed from xdm

Fri Jun 22 15:50:00 2001  George Lebl <jirka@5z.com>

	* gui/gdmchooser.c, gui/gdmwm.[ch], gui/gdmlogin.c: unify the
	  xinerama stuff in gdmwm

	* daemon/xdmcp.c: fix warning

Fri Jun 22 15:26:01 2001  George Lebl <jirka@5z.com>
