@@ -1,3 +1,8 @@
+Sun Jun 24 14:07:47 2001  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c: when ping times out, do proper session stoping
+	  first rather then just a straight kill
+
 Sun Jun 24 13:45:59 2001  George Lebl <jirka@5z.com>
 
 	* config/gdm.conf.in, daemon/gdm.[ch], daemon/slave.c,
